# ISeeTV

./: .cursorignore  .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: linting.yml  on-issue-closed.yml  on-issue-complete.yml  update-readme-inprogress-tickets.yml  update-readme-milestones.yml  update-readme-tickets.yml  update-readme.yml
.scripts/: update_readme.py  update_readme_inprogress_tickets.py  update_readme_milestones.py
backend/: debug_parser.py  lint.sh  main.py  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  scheduler.py  video_helpers.py
backend/app/common/: download_helper.py  logger.py  utils.py
backend/app/services/: epg_service.py  m3u_service.py
backend/common/: constants.py  db.py  download_helper.py  models.py  state.py  utils.py
backend/download/: downloader.py
backend/ingest/: epg_loader.py  epg_parser.py  ingest_tasks.py  m3u_loader.py  m3u_parser.py
backend/models/: db_models.py  models.py
backend/utils/: filter_utils.py
data/: database_schema.md  init_db.py
frontend/: .eslintrc.cjs  .prettierignore  eslint.config.cjs  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.mts  vite.config.ts
frontend/src/: App.css  App.tsx  App.vue  config.ts  index.tsx  main.ts  main.tsx
frontend/src/assets/: theme.css
frontend/src/components/: ChannelList.tsx  ChannelsTable.vue  DownloadProgress.tsx  EPG.tsx  EpgProgressBar.tsx  HelloWorld.vue  LoadingOverlay.tsx  LoadingPopup.tsx  Plugins.vue  ProgressDialog.tsx  SettingsModal.tsx  SettingsModal.vue  SourcesTable.vue  VideoPlayer.tsx
frontend/src/config/: api.ts
frontend/src/models/: Channel.ts  Program.ts  Settings.ts
frontend/src/router/: index.ts
frontend/src/services/: api.js  channelService.ts  epgService.ts  m3uService.ts  recentChannelsService.ts  settingsService.ts  toastService.ts
frontend/src/stores/: themeStore.ts
frontend/src/types/: api.ts  types.ts
frontend/src/utils/: apiUtils.ts  dateUtils.ts  fileUtils.ts  timezones.ts
frontend/src/views/: Channels.vue  Home.vue  Rules.vue  Sources.vue  TableViewer.vue
