[tool.poetry]
name = "iseetv-backend"
version = "0.1.0"
description = "IPTV Backend"
packages = [{include = "app"}]
authors = ["Jacob Lasky <jacob.s.lasky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
aiohttp = "^3.11.12"
httpx = "^0.28.1"
requests = "^2.32.3"
aiosqlite = "^0.21.0"
watchgod = "^0.8.2"
python-ffmpeg-video-streaming = "^0.1.16"
apscheduler = "^3.11.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"
mypy = "^1.15.0"
black = "^25.1.0"
types-requests = "^2.32.0.20241016"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
exclude = ["dev.py", "_dev.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
