[project]
name = "backend"
version = "0.1.0"
description = "Backend for the ISeeTV app"
authors = [
    {name = "Jacob Lasky",email = "jacob.s.lasky@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
